Fix : 로그인페이지 시큐리티 설정에서 (resource/**) 제외 추가로 로그인 오류 해결
login.html, WebSecurityConfig.java

Resolved : #2

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -141,9 +141,10 @@
   function showEvent(pageNum) {
     $.ajax({
       type: "GET",
-      url: "/neticket/events/?page=${pageNum}",
+      url: "/neticket/events/?page="+pageNum,
+      dataType: "json",
       headers: {'Content-Type': 'application/json'},
-      success: function (respones, status, xhr) {
+      success: function (respones) {
         for (let i = 0; i < respones.length; i++) {
           let eventDto = respones[i];
           let id = eventDto.id;
