--- a/src/main/resources/static/css/stylejang.css
+++ b/src/main/resources/static/css/stylejang.css
@@ -7,6 +7,12 @@
   max-width: 700px;
   align-content: center;
   margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  height: 600px;
+  transform: translate(-50%, -50%);
 }
 
 h1 {
