Fix : login.html 회원가입 버튼 오타 수정
login.html

Resolved : #2

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -60,7 +60,7 @@
   </div>
   <button type="submit" class="btn btn-dark" onclick="login()">로그인</button>
   <hr>
-  <button type="button" class="btn btn-warning" onclick="location.href='/neticket/singup-page'">
+  <button type="button" class="btn btn-warning" onclick="location.href='/neticket/signup-page'">
     회원가입
   </button>
 </div>
